# ykpiv_desktop

./: .gitignore  .gitmodules  .metadata  CHANGELOG.md  Cline-Technical-Debt-evaluation.md  README.md  YubiKey-Remote-Access-Guide.md  ffigen-windows.yaml  ffigen.yaml  pubspec.yaml
ADR/: CryptoArchChoices.md
example/: .gitignore  README.md  pubspec.yaml
example/integration_test/: integration_test.dart
example/lib/: ecdh.dart  main.dart
example/macos/: Podfile
example/macos/Runner/: DebugProfile.entitlements  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/tests/: ECC384.asn1  certificate_info_test.dart  ed25519_asn1Seq.asn1  x25519_asn1Seq.asn1
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: LICENSE  certificate_info.dart  ykpiv_desktop.dart  ykpiv_desktop_bindings_generated.dart
macos/: ykpiv_desktop.podspec
macos/Classes/: ykpiv_desktop.c
src/: CMakeLists.txt  ykpiv_desktop.c
windows/: .gitignore  CMakeLists.txt
